--- a/Tutorials/Tutorial 2/Makefile
+++ b/Tutorials/Tutorial 2/Makefile
@@ -1,2 +1,6 @@
 build:
 	gcc -Wall -Wextra -std=c99 question1.c -o question1
+	gcc -Wall -Wextra -std=c99 question2.c -o question2
+	gcc -Wall -Wextra -std=c99 question3.c -o question3
+	gcc -Wall -Wextra -std=c99 question4.c -o question4
+	gcc -Wall -Wextra -std=c99 question5.c -lm -o question5
