--- a/Tutorials/Tutorial 3/Makefile
+++ b/Tutorials/Tutorial 3/Makefile
@@ -5,3 +5,4 @@ build:
 	gcc -g -Wall -Wextra -std=c99 question2.c -o question2.o
 	gcc -g -Wall -Wextra -std=c99 question3.c -o question3.o
 	gcc -g -Wall -Wextra -std=c99 question4.c -o question4.o
+	gcc -g -Wall -Wextra -std=c99 question5.c -o question5.o -lm
