--- a/Tutorials/Tutorial 5/Makefile
+++ b/Tutorials/Tutorial 5/Makefile
@@ -2,3 +2,4 @@ build:
 	gcc -Wall -Wextra -std=c99 -pthread question1.c -o question1.o
 	gcc -Wall -Wextra -std=c99 -pthread question2.c -o question2.o
 	gcc -Wall -Wextra -std=c99 -pthread question3.c -o question3.o
+	gcc -Wall -Wextra -std=c99 -pthread question4.c -o question4.o
