--- a/Tutorials/Tutorial 6/Makefile
+++ b/Tutorials/Tutorial 6/Makefile
@@ -1,2 +1,4 @@
 build:
-	gcc -Wall -Wextra -std=c99 -pthread question1.c -o question1.o
+	gcc -Wall -Wextra -std=c99 question1.c -o question1.o
+	gcc -Wall -Wextra -std=c99 question2.c -o question2.o
+	gcc -Wall -Wextra -std=c99 question3.c -o question3.o
