--- a/Tutorials/Tutorial 6/Makefile
+++ b/Tutorials/Tutorial 6/Makefile
@@ -1,4 +1,5 @@
 build:
 	gcc -Wall -Wextra -std=c99 question1.c -o question1.o
 	gcc -Wall -Wextra -std=c99 question2.c -o question2.o
-	gcc -Wall -Wextra -std=c99 question3.c -o question3.o
+	gcc -Wall -Wextra -std=c99 -pthread question3.c -o question3.o
+	gcc -Wall -Wextra -std=c99 -pthread question4.c -o question4.o
