worked on lab 3

--- a/Labs/Lab 3/Makefile
+++ b/Labs/Lab 3/Makefile
@@ -1,2 +1,2 @@
 build:
-	gcc -Wall -Wextra -std=c99 -pthread solution_check.c -o solution_check.o
+	gcc -g -Wall -Wextra -std=c99 -pthread solution_check.c -o solution_check.o -lm
