question 3: SIGINT and fork()/exec() example

--- a/Tutorials/Tutorial 7/Makefile
+++ b/Tutorials/Tutorial 7/Makefile
@@ -1,3 +1,5 @@
 build:
 	gcc -g -Wall -Wextra -std=c99 question1.c -o question1.o
 	gcc -g -Wall -Wextra -std=c99 question2.c -o question2.o
+	gcc -g -Wall -Wextra -std=gnu99 sigtrap.c -o process
+	gcc -g -Wall -Wextra -std=c99 question3.c -o question3.o
