--- a/Tutorials/Tutorial 7/Makefile
+++ b/Tutorials/Tutorial 7/Makefile
@@ -3,3 +3,4 @@ build:
 	gcc -g -Wall -Wextra -std=c99 question2.c -o question2.o
 	gcc -g -Wall -Wextra -std=gnu99 sigtrap.c -o process
 	gcc -g -Wall -Wextra -std=c99 question3.c -o question3.o
+	gcc -g -Wall -Wextra -std=c99 question4.c -o question4.o
