question 5: Added code but running into some trouble

--- a/Tutorials/Tutorial 7/Makefile
+++ b/Tutorials/Tutorial 7/Makefile
@@ -4,3 +4,4 @@ build:
 	gcc -g -Wall -Wextra -std=gnu99 sigtrap.c -o process
 	gcc -g -Wall -Wextra -std=c99 question3.c -o question3.o
 	gcc -g -Wall -Wextra -std=c99 question4.c -o question4.o
+	gcc -g -Wall -Wextra -std=c99 question5.c -o question5.o
