--- a/Tutorials/Tutorial 9/Makefile
+++ b/Tutorials/Tutorial 9/Makefile
@@ -3,4 +3,4 @@ build:
 	gcc-7 -Wall -Wextra -std=c99 -fopenmp demo_2.c -o demo_2.o -lm
 	gcc-7 -Wall -Wextra -std=c99 -fopenmp demo_3.c -o demo_3.o -lm
 	gcc-7 -Wall -Wextra -std=c99 -fopenmp demo_4.c -o demo_4.o -lm
-	gcc-7 -Wall -Wextra -std=c99 -fopenmp question2.c -o question2.o -lm
+	gcc-7 -g -Wall -Wextra -std=c99 -fopenmp question2.c -o question2.o -lm
