--- a/Tutorials/Tutorial 9/Makefile
+++ b/Tutorials/Tutorial 9/Makefile
@@ -5,3 +5,4 @@ build:
 	gcc-7 -Wall -Wextra -std=c99 -fopenmp demo_4.c -o demo_4.o -lm
 	gcc-7 -g -Wall -Wextra -std=c99 -fopenmp question2.c -o question2.o -lm
 	gcc-7 -g -Wall -Wextra -std=c99 -fopenmp question3.c -o question3.o -lm
+	gcc-7 -g -Wall -Wextra -std=c99 -fopenmp question4.c -o question4.o -lm
